--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,6 +114,14 @@
   height: 1em;
 }
 
+.square {
+  height: 6em;
+}
+
+.table td {
+  border: 1px solid #0070f3;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
