--- a/styles/Tiles.module.css
+++ b/styles/Tiles.module.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+.title:hover {
+    font-family: 'Lato', sans-serif;
+    background-color: blueviolet;
+}
+
 .title {
     font-family: 'Lato', sans-serif;
 }
+
+.square {
+    background: #fff;
+    border: 1px solid #999;
+    float: left
+    font-size 16px;
+    line-height: 50px;
+    height: 50px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 50px;  
+  }
+  
