--- a/styles/Tiles.module.css
+++ b/styles/Tiles.module.css
@@ -7,19 +7,45 @@
 
 .title {
     font-family: 'Lato', sans-serif;
+    color: blue;
+    line-height: 60px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.description:hover {
+    font-family: 'Lato', sans-serif;
+    color: green;
+    line-height: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    max-height: fit-content;
+    overflow: hidden;
+}
+
+.description {
+    color:#fff
 }
 
 .square {
     background: #fff;
     border: 1px solid #999;
-    float: left
-    font-size 16px;
-    line-height: 50px;
-    height: 50px;
+    
+    font-size: 16px;
+    height: 400px;
     margin-right: -1px;
+    margin-left: -1px;
     margin-top: -1px;
+    margin-bottom: -1px;
     padding: 0;
-    text-align: center;
-    width: 50px;  
+    text-align: left;
+    width: 400px;  
   }
-  
+
+.titleContainer {
+    height: 40%;
+}
+
+.descriptionContainer {
+    height: 60%;
+}
