--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,25 +6,15 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.container {
+  margin: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  
-  font-size: 16px;
-  line-height: 400px;
-  height: 400px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 400px;  
-}
+
